<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/topolayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:id="@+id/back_layout"
                android:layout_width="50dp"
                android:layout_marginLeft="30dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/back" />
            </RelativeLayout>

            <com.dhivi.inc.topo.utils.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/changepassword"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/back_layout"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_textview"
                android:visibility="visible"
                app:font_text="@string/fontTitlelight" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/currentpassword_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/editbackground_black">

            <com.dhivi.inc.topo.utils.FontEditText
                android:id="@+id/currentpassword_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/signup_pwd_icon"
                android:background="@android:color/transparent"
                android:gravity="bottom"
                android:hint="@string/currentpassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/searchcursor"
                android:textSize="@dimen/edittext"
                app:font_text="@string/fontTitlelight" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/newpassword_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/editbackground_black">

            <com.dhivi.inc.topo.utils.FontEditText
                android:id="@+id/newpassword_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/signup_pwd_icon"
                android:background="@android:color/transparent"
                android:gravity="bottom"
                android:hint="@string/newpassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/searchcursor"
                android:textSize="@dimen/edittext"
                app:font_text="@string/fontTitlelight" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirmpassword_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/editbackground_black">

            <com.dhivi.inc.topo.utils.FontEditText
                android:id="@+id/confirmpassword_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/signup_pwd_icon"
                android:background="@android:color/transparent"
                android:gravity="bottom"
                android:hint="@string/confirmpassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/searchcursor"
                android:textSize="@dimen/edittext"
                app:font_text="@string/fontTitlelight" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bttom_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:weightSum="1">



        <com.dhivi.inc.topo.utils.FontButton
            android:id="@+id/updatepassword_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/forgot_bg"
            android:letterSpacing="0.06"
            android:text="@string/updatepassword"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/buttontext"
            android:stateListAnimator="@null"
            app:font_text="@string/fontTitlereguler" />

    </LinearLayout>

</RelativeLayout>
